<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/emailRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_label" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_hint"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/pwdRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/pwdLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pwd_label" />

            <EditText
                android:id="@+id/pwdInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pwd_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tncRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/pwdRow"
            tools:layout_editor_absoluteX="24dp">

            <CheckBox
                android:id="@+id/tncBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tnc_before" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tnc_after" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_txt" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>