<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LandingActivity"
    tools:showIn="@layout/activity_landing">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/emailRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userAuthEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/legendRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timeLegend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/timeLegend"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/spotPriceLegend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/spotPriceLegend"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/listRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

            <view
                android:id="@+id/swipeLayout"
                class="android.support.v4.widget.SwipeRefreshLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/price_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </view>
        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>